fix: increase messages container height for improved visibility across devices

--- a/css/chat.css
+++ b/css/chat.css
@@ -260,7 +260,7 @@
     }
 
     .messages {
-        height: 450px;
+        height: 650px;
     }
 }
 
@@ -285,7 +285,7 @@
     }
 
     .messages {
-        height: 400px;
+        height: 550px;
         padding: 15px;
     }
 
@@ -355,7 +355,7 @@
     }
 
     .messages {
-        height: 350px;
+        height: 500px;
         padding: 10px;
     }
 
@@ -450,7 +450,7 @@
     }
 
     .messages {
-        height: 300px;
+        height: 450px;
         padding: 8px;
     }
 
